--- a/src/styles/global/header.scss
+++ b/src/styles/global/header.scss
@@ -4,11 +4,14 @@
     flex-basis: 90%;
     height: 40vh;
     border-bottom: 1px solid rgba(128, 128, 128, 0.38);
-    max-height: 4rem;
+    max-height: 3rem;
     .items {
         display: flex;
         align-items: center;
         padding: .5rem;
+    }
+    .project-title{
+        font-size: $size-rem-12;
     }
     .user-profile{
         img{
