--- a/src/styles/global/sidebar.scss
+++ b/src/styles/global/sidebar.scss
@@ -27,5 +27,9 @@
         border-radius: 50%;
         background: beige;
         margin: auto;
+        &.small{
+            width: 40px;
+            height: 40px;
+        }
     }
 }
