suggested improvements are done

--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -15,7 +15,7 @@ html, body {
   flex-wrap: wrap;
   position: relative;
   .sidebar-wrapper{
-    width: 6%;
+    // width: 6%;
     min-width: 78px;
     background: $white;
     z-index: 99999;
