--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -86,4 +86,9 @@
 }
 .grid-item{
     background: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: darkred;
 }
