color and remove tile implemented

--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -92,3 +92,9 @@
     font-size: 2rem;
     color: darkred;
 }
+.close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
