--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -1,3 +1,10 @@
+.home-page{
+    height: 100%;
+
+}
+.grid-section{
+    height: 100%;
+}
 .tabs{
     border-bottom: $border;
     background: $default-bg-gray;
@@ -22,8 +29,8 @@
 .drawer{
     display: block;
     position: absolute;
-    height: calc(100vh - 7rem);
-    min-width: 140px;
+    min-height: 100%;
+    min-width: calc(140px - 1rem - 3px);
     background: #fff;
     z-index: 1;
     overflow: auto;
@@ -69,19 +76,24 @@
     }
 }
 .grid-wrapper{
-    overflow: hidden;
+    height: 100%;
+    overflow-x: scroll;
+    .Droppable{
+        height: 100%;
+    }
 }
 .pined{
-    display: flex;
+    display: block;
     .drawer-locked{
-        display: flex;
-        flex-basis: 140px;
+        display: inline-block;
+        width: calc(140px - 1rem - 3px);
         position: relative;
     }
     .grid-wrapper{
-        display: flex;
-        flex-basis: calc(100% - 140px);
-        transition: flex-basis 1s;
+        display: inline-block;
+        width: calc(100% - 142px);
+        transition: width 1s;
+        float: right;
     }
 }
 .grid-item{
@@ -96,5 +108,6 @@
     position: absolute;
     top: 0;
     right: 0;
+    padding: 0 10px;
     cursor: pointer;
 }
