--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -20,6 +20,7 @@ html, body {
     z-index: 99999;
   }
   .page-content{
-    width: calc(100% - 78px);
+    // width: calc(100% - 78px);
+    width: 100%;
   }
 }
