--- a/src/styles/global/app.scss
+++ b/src/styles/global/app.scss
@@ -13,7 +13,9 @@ html, body {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  position: relative;
+  position: absolute;
+  width: 100% ;
+  height:100%;
   .sidebar-wrapper{
     min-width: 78px;
     background: $white;
