--- a/src/styles/global/sidebar.scss
+++ b/src/styles/global/sidebar.scss
@@ -9,6 +9,18 @@
     .menu{
         flex-basis: 100%;
         text-align: center;
+        .logo {
+            background: url("../assets/images/icon-194x194.png");
+            -webkit-background-size: contain;
+            -moz-background-size: contain;
+            -o-background-size: contain;
+            background-size: contain;
+            background-repeat:   no-repeat;
+            background-position: center center; 
+            margin: 12px;
+            height: 50px;
+            width: 50px;
+        }
     }
     .menu-item{
         padding: 0 .2rem;
@@ -22,8 +34,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background: beige;
         margin: auto;
