--- a/src/styles/global/header.scss
+++ b/src/styles/global/header.scss
@@ -19,6 +19,8 @@
         }
     }
     .user-profile{
+        font-size: 2rem;
+        color: #3b8ad9;
         img{
             width: 2rem;
             margin-left: .5rem;
